# cortex-m-spa

./: Cargo.toml  ci.sh  justfile
macros/: Cargo.toml
macros/src/: lib.rs
model/: Cargo.toml
model/src/: lib.rs  main.rs  nvic.rs
model/src/nvic/: iabr.rs  icer.rs  icpr.rs  ipr.rs  iser.rs  ispr.rs
model/src/nvic/iabr/: active.rs
model/src/nvic/icer/: clrena.rs
model/src/nvic/icpr/: clrpend.rs
model/src/nvic/ipr/: ip.rs
model/src/nvic/iser/: setena.rs
model/src/nvic/ispr/: setpend.rs
src/: lib.rs  nvic.rs
