[package]
name = "cortex-m-spa-macros"
version = "0.1.0"
edition = "2024"

[dependencies]
model = { package = "cortex-m-spa-model", path = "../model" }
proto-hal-build = { git = "https://github.com/adinack/proto-hal" }
proto-hal-macros = { git = "https://github.com/adinack/proto-hal" }

[lib]
proc-macro = true

[features]
m0 = []
m4 = []
